--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link href="connect4.css" rel="stylesheet">
 </head>
 <body>
-
+<button>Start Game</button>
 <div id="game">
   <table id="board"></table>
 </div>
