--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <link href="connect4.css" rel="stylesheet">
 </head>
 <body>
+  <form action="">
+   <label for="player1">Player 1 Color</label><input type="text" name="player1" id="player1">
+    <label for="player2">Player 2 Color</label><input type="text" name="player2" id="player2">
 <button>Start Game</button>
+</form>
 <div id="game">
   <table id="board"></table>
 </div>
