--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <head>
   <title>Connect 4</title>
   <link href="connect4.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet" />
 </head>
 <body>
+  <h1>Connect Four with Color!</h1>
+    <h2>Please enter a color name</h2>
+    <h3>Need <a href="https://www.w3schools.com/colors/colors_names.asp" target="_blank">Inspiration?</a></h3>
   <form action="">
-   <label for="player1">Player 1 Color</label><input type="text" name="player1" id="player1">
-    <label for="player2">Player 2 Color</label><input type="text" name="player2" id="player2">
+   <label for="player1">Player 1 Color </label><input type="text" name="player1" id="player1"required>
+    <label for="player2">Player 2 Color </label><input type="text" name="player2" id="player2" required>
 <button>Start Game</button>
 </form>
 <div id="game">
